// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addInterestButtonPressed function 1`] = `
<SafeAreaView
  style={
    Object {
      "backgroundColor": "#2c3e50",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#fff",
          "fontWeight": "700",
          "textAlign": "center",
        }
      }
    >
      Add in your details so other people can find you
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "padding": 20,
      }
    }
  >
    <FlatList
      data={
        Array [
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            editable={true}
            keyboardType="default"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Name"
            placeholderTextColor="rgba(225,225,225,0.7)"
            rejectResponderTermination={true}
            returnKeyType="next"
            style={
              Object {
                "backgroundColor": "rgba(225,225,225,0.2)",
                "color": "#fff",
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />,
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            editable={true}
            keyboardType="default"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Location"
            placeholderTextColor="rgba(225,225,225,0.7)"
            rejectResponderTermination={true}
            returnKeyType="next"
            style={
              Object {
                "backgroundColor": "rgba(225,225,225,0.2)",
                "color": "#fff",
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />,
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            editable={true}
            keyboardType="default"
            onChangeText={[Function]}
            placeholder="Contact: Skype or phone number"
            placeholderTextColor="rgba(225,225,225,0.7)"
            rejectResponderTermination={true}
            returnKeyType="next"
            style={
              Object {
                "backgroundColor": "rgba(225,225,225,0.2)",
                "color": "#fff",
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />,
          <LHCButton
            onSelected={[Function]}
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "700",
                  "textAlign": "center",
                }
              }
            >
              No Interests
            </Text>
          </LHCButton>,
          <LHCButton
            onSelected={[Function]}
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "700",
                  "textAlign": "center",
                }
              }
            >
              Add Interest
            </Text>
          </LHCButton>,
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </View>
  <View>
    <LHCButton
      onSelected={[Function]}
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        Save Changes
      </Text>
    </LHCButton>
    <LHCButton
      onSelected={[Function]}
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        Logout
      </Text>
    </LHCButton>
  </View>
</SafeAreaView>
`;

exports[`addInterestButtonPressed function 2`] = `
<SafeAreaView
  style={
    Object {
      "backgroundColor": "#2c3e50",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#fff",
          "fontWeight": "700",
          "textAlign": "center",
        }
      }
    >
      Add in your details so other people can find you
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "padding": 20,
      }
    }
  >
    <FlatList
      data={
        Array [
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            editable={true}
            keyboardType="default"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Name"
            placeholderTextColor="rgba(225,225,225,0.7)"
            rejectResponderTermination={true}
            returnKeyType="next"
            style={
              Object {
                "backgroundColor": "rgba(225,225,225,0.2)",
                "color": "#fff",
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />,
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            editable={true}
            keyboardType="default"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Location"
            placeholderTextColor="rgba(225,225,225,0.7)"
            rejectResponderTermination={true}
            returnKeyType="next"
            style={
              Object {
                "backgroundColor": "rgba(225,225,225,0.2)",
                "color": "#fff",
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />,
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            editable={true}
            keyboardType="default"
            onChangeText={[Function]}
            placeholder="Contact: Skype or phone number"
            placeholderTextColor="rgba(225,225,225,0.7)"
            rejectResponderTermination={true}
            returnKeyType="next"
            style={
              Object {
                "backgroundColor": "rgba(225,225,225,0.2)",
                "color": "#fff",
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />,
          <LHCButton
            onSelected={[Function]}
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "700",
                  "textAlign": "center",
                }
              }
            >
              Tap to Edit New Interest
            </Text>
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "700",
                  "textAlign": "center",
                }
              }
            >
              
            </Text>
          </LHCButton>,
          <LHCButton
            onSelected={[Function]}
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "700",
                  "textAlign": "center",
                }
              }
            >
              Add Interest
            </Text>
          </LHCButton>,
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </View>
  <View>
    <LHCButton
      onSelected={[Function]}
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        Save Changes
      </Text>
    </LHCButton>
    <LHCButton
      onSelected={[Function]}
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        Logout
      </Text>
    </LHCButton>
  </View>
</SafeAreaView>
`;

exports[`interestButtons Editable function with interests 1`] = `
Array [
  <LHCButton
    onSelected={[Function]}
  >
    <Text
      style={
        Object {
          "color": "#fff",
          "fontWeight": "700",
          "textAlign": "center",
        }
      }
    >
      Interest: a
    </Text>
    <Text
      style={
        Object {
          "color": "#fff",
          "fontWeight": "700",
          "textAlign": "center",
        }
      }
    >
      b
    </Text>
  </LHCButton>,
  <LHCButton
    onSelected={[Function]}
  >
    <Text
      style={
        Object {
          "color": "#fff",
          "fontWeight": "700",
          "textAlign": "center",
        }
      }
    >
      Interest: c
    </Text>
    <Text
      style={
        Object {
          "color": "#fff",
          "fontWeight": "700",
          "textAlign": "center",
        }
      }
    >
      d
    </Text>
  </LHCButton>,
]
`;

exports[`interestButtons Editable function with no interests 1`] = `
Array [
  <LHCButton
    onSelected={[Function]}
  >
    <Text
      style={
        Object {
          "color": "#fff",
          "fontWeight": "700",
          "textAlign": "center",
        }
      }
    >
      No Interests
    </Text>
  </LHCButton>,
]
`;

exports[`interestButtons Non-Editable function with interests 1`] = `
Array [
  <LHCButton
    onSelected={[Function]}
  >
    <Text
      style={
        Object {
          "color": "#fff",
          "fontWeight": "700",
          "textAlign": "center",
        }
      }
    >
      Interest: a
    </Text>
    <Text
      style={
        Object {
          "color": "#fff",
          "fontWeight": "700",
          "textAlign": "center",
        }
      }
    >
      b
    </Text>
  </LHCButton>,
  <LHCButton
    onSelected={[Function]}
  >
    <Text
      style={
        Object {
          "color": "#fff",
          "fontWeight": "700",
          "textAlign": "center",
        }
      }
    >
      Interest: c
    </Text>
    <Text
      style={
        Object {
          "color": "#fff",
          "fontWeight": "700",
          "textAlign": "center",
        }
      }
    >
      d
    </Text>
  </LHCButton>,
]
`;

exports[`interestButtons Non-Editable function with no interests 1`] = `
Array [
  <LHCButton
    onSelected={[Function]}
  >
    <Text
      style={
        Object {
          "color": "#fff",
          "fontWeight": "700",
          "textAlign": "center",
        }
      }
    >
      No Interests
    </Text>
  </LHCButton>,
]
`;

exports[`should display ProfileScreen Editable with no errors 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#2c3e50",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#fff",
          "fontWeight": "700",
          "textAlign": "center",
        }
      }
    >
      Add in your details so other people can find you
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "padding": 20,
      }
    }
  >
    <RCTScrollView
      data={
        Array [
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            editable={true}
            keyboardType="default"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Name"
            placeholderTextColor="rgba(225,225,225,0.7)"
            rejectResponderTermination={true}
            returnKeyType="next"
            style={
              Object {
                "backgroundColor": "rgba(225,225,225,0.2)",
                "color": "#fff",
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />,
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            editable={true}
            keyboardType="default"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Location"
            placeholderTextColor="rgba(225,225,225,0.7)"
            rejectResponderTermination={true}
            returnKeyType="next"
            style={
              Object {
                "backgroundColor": "rgba(225,225,225,0.2)",
                "color": "#fff",
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />,
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            editable={true}
            keyboardType="default"
            onChangeText={[Function]}
            placeholder="Contact: Skype or phone number"
            placeholderTextColor="rgba(225,225,225,0.7)"
            rejectResponderTermination={true}
            returnKeyType="next"
            style={
              Object {
                "backgroundColor": "rgba(225,225,225,0.2)",
                "color": "#fff",
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />,
          <LHCButton
            onSelected={[Function]}
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "700",
                  "textAlign": "center",
                }
              }
            >
              No Interests
            </Text>
          </LHCButton>,
          <LHCButton
            onSelected={[Function]}
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "700",
                  "textAlign": "center",
                }
              }
            >
              Add Interest
            </Text>
          </LHCButton>,
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            editable={true}
            keyboardType="default"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Name"
            placeholderTextColor="rgba(225,225,225,0.7)"
            rejectResponderTermination={true}
            returnKeyType="next"
            style={
              Object {
                "backgroundColor": "rgba(225,225,225,0.2)",
                "color": "#fff",
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            editable={true}
            keyboardType="default"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Location"
            placeholderTextColor="rgba(225,225,225,0.7)"
            rejectResponderTermination={true}
            returnKeyType="next"
            style={
              Object {
                "backgroundColor": "rgba(225,225,225,0.2)",
                "color": "#fff",
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            editable={true}
            keyboardType="default"
            onChangeText={[Function]}
            placeholder="Contact: Skype or phone number"
            placeholderTextColor="rgba(225,225,225,0.7)"
            rejectResponderTermination={true}
            returnKeyType="next"
            style={
              Object {
                "backgroundColor": "rgba(225,225,225,0.2)",
                "color": "#fff",
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#2980b6",
                "margin": 10,
                "opacity": 1,
                "paddingVertical": 15,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "700",
                  "textAlign": "center",
                }
              }
            >
              No Interests
            </Text>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#2980b6",
                "margin": 10,
                "opacity": 1,
                "paddingVertical": 15,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "700",
                  "textAlign": "center",
                }
              }
            >
              Add Interest
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#2980b6",
          "margin": 10,
          "opacity": 1,
          "paddingVertical": 15,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        Save Changes
      </Text>
    </View>
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#2980b6",
          "margin": 10,
          "opacity": 1,
          "paddingVertical": 15,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        Logout
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`should display ProfileScreen Non-Editable with no errors 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#2c3e50",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "padding": 20,
      }
    }
  >
    <RCTScrollView
      data={
        Array [
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            editable={false}
            keyboardType="default"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Name"
            placeholderTextColor="rgba(225,225,225,0.7)"
            rejectResponderTermination={true}
            returnKeyType="next"
            style={
              Object {
                "backgroundColor": "rgba(225,225,225,0.2)",
                "color": "#fff",
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            underlineColorAndroid="transparent"
            value="name"
          />,
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            editable={false}
            keyboardType="default"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Location"
            placeholderTextColor="rgba(225,225,225,0.7)"
            rejectResponderTermination={true}
            returnKeyType="next"
            style={
              Object {
                "backgroundColor": "rgba(225,225,225,0.2)",
                "color": "#fff",
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            underlineColorAndroid="transparent"
            value="loc"
          />,
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            editable={false}
            keyboardType="default"
            onChangeText={[Function]}
            placeholder="Contact: Skype or phone number"
            placeholderTextColor="rgba(225,225,225,0.7)"
            rejectResponderTermination={true}
            returnKeyType="next"
            style={
              Object {
                "backgroundColor": "rgba(225,225,225,0.2)",
                "color": "#fff",
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            underlineColorAndroid="transparent"
            value="con"
          />,
          <LHCButton
            onSelected={[Function]}
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "700",
                  "textAlign": "center",
                }
              }
            >
              Interest: d
            </Text>
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "700",
                  "textAlign": "center",
                }
              }
            >
              e
            </Text>
          </LHCButton>,
          <LHCButton
            onSelected={[Function]}
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "700",
                  "textAlign": "center",
                }
              }
            >
              Interest: f
            </Text>
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "700",
                  "textAlign": "center",
                }
              }
            >
              g
            </Text>
          </LHCButton>,
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            editable={false}
            keyboardType="default"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Name"
            placeholderTextColor="rgba(225,225,225,0.7)"
            rejectResponderTermination={true}
            returnKeyType="next"
            style={
              Object {
                "backgroundColor": "rgba(225,225,225,0.2)",
                "color": "#fff",
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            underlineColorAndroid="transparent"
            value="name"
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            editable={false}
            keyboardType="default"
            onChangeText={[Function]}
            onSubmitEditing={[Function]}
            placeholder="Location"
            placeholderTextColor="rgba(225,225,225,0.7)"
            rejectResponderTermination={true}
            returnKeyType="next"
            style={
              Object {
                "backgroundColor": "rgba(225,225,225,0.2)",
                "color": "#fff",
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            underlineColorAndroid="transparent"
            value="loc"
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            editable={false}
            keyboardType="default"
            onChangeText={[Function]}
            placeholder="Contact: Skype or phone number"
            placeholderTextColor="rgba(225,225,225,0.7)"
            rejectResponderTermination={true}
            returnKeyType="next"
            style={
              Object {
                "backgroundColor": "rgba(225,225,225,0.2)",
                "color": "#fff",
                "height": 40,
                "marginBottom": 10,
                "padding": 10,
              }
            }
            underlineColorAndroid="transparent"
            value="con"
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#2980b6",
                "margin": 10,
                "opacity": 1,
                "paddingVertical": 15,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "700",
                  "textAlign": "center",
                }
              }
            >
              Interest: d
            </Text>
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "700",
                  "textAlign": "center",
                }
              }
            >
              e
            </Text>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#2980b6",
                "margin": 10,
                "opacity": 1,
                "paddingVertical": 15,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "700",
                  "textAlign": "center",
                }
              }
            >
              Interest: f
            </Text>
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontWeight": "700",
                  "textAlign": "center",
                }
              }
            >
              g
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "height": 0,
            }
          }
        />
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;
